cfg: load rtpengine module

--- a/pcscf/opensips.cfg
+++ b/pcscf/opensips.cfg
@@ -127,6 +127,8 @@ modparam("proto_ipsec", "min_spi", 10000)
 modparam("proto_ipsec", "max_spi", 10100)
 #modparam("proto_ipsec", "allowed_algorithms", "hmac-sha-1-96=null")
 
+#### RTPENGINE module
+loadmodule "rtpengine.so"
 modparam("rtpengine", "rtpengine_sock", "udp:$${RTPENGINE_IP}:2223")
 
 
