scscf: default dialplan to USER

--- a/scscf/opensips.cfg
+++ b/scscf/opensips.cfg
@@ -223,9 +223,8 @@ route{
 			$rU = $(rU{s.select,0,;});
 		}
 		if (!dp_translate(1, $rU, $var(dialplan))) {
-			xlog("L_ERR", "[$ci] dial $rU not in dialplan\n");
-			t_reply(404, "Unknown user");
-			exit;
+			$var(dialplan) = "USER";
+			xlog("L_DBG", "[$ci] unknown dialplan - considering $var(dialplan)\n");
 		}
 		xlog("L_INFO", "[$ci] Dial $rU is a $var(dialplan) dialplan\n");
 		switch ($var(dialplan)) {
