pcscf: pua_reginfo add ul_identities_key param

--- a/pcscf/opensips.cfg
+++ b/pcscf/opensips.cfg
@@ -146,6 +146,7 @@ modparam("pua","db_url", "mysql://pcscf:heslo@${MYSQL_IP}/pcscf")
 loadmodule "pua_reginfo.so"
 
 modparam("pua_reginfo", "ul_domain", "location")
+modparam("pua_reginfo", "ul_identities_key", "identities")
 modparam("pua_reginfo", "default_domain", "${IMS_DOMAIN}")
 modparam("pua_reginfo", "server_address", "sip:reginfo@pcscf.${IMS_DOMAIN}")
 
