pcscf: add presence_reginfo module

--- a/pcscf/opensips.cfg
+++ b/pcscf/opensips.cfg
@@ -140,6 +140,7 @@ loadmodule "json.so"
 
 #### PRESENCE modules
 loadmodule "presence.so"
+loadmodule "presence_reginfo.so"
 loadmodule "pua.so"
 modparam("pua","db_url", "mysql://pcscf:heslo@${MYSQL_IP}/pcscf")
 
