pcscf: provide db_url to presence as well
This prevents pcscf from crasing when handling a SUBSCRIBE

Many thanks to Herle Supreeth for testing and reporting this crash

--- a/pcscf/opensips.cfg
+++ b/pcscf/opensips.cfg
@@ -142,7 +142,7 @@ loadmodule "json.so"
 loadmodule "presence.so"
 loadmodule "presence_reginfo.so"
 loadmodule "pua.so"
-modparam("pua","db_url", "mysql://pcscf:heslo@${MYSQL_IP}/pcscf")
+modparam("pua|presence","db_url", "mysql://pcscf:heslo@${MYSQL_IP}/pcscf")
 
 loadmodule "pua_reginfo.so"
 
