scscf: add P-Asserted-URIs in 200 OK reply
Thanks go to Herle Supreeth for reporting this

--- a/scscf/opensips.cfg
+++ b/scscf/opensips.cfg
@@ -22,6 +22,7 @@ log_level=3
 xlog_level=3
 log_stderror=yes
 log_stdout=yes
+xlog_buf_size=16384
 log_facility=LOG_LOCAL0
 
 udp_workers=4
@@ -125,6 +126,12 @@ modparam("dialplan","db_url", "mysql://scscf:heslo@${MYSQL_IP}/scscf")
 
 #### auth module
 loadmodule "auth.so"
+
+#### JSON module
+loadmodule "json.so"
+
+#### XML module
+loadmodule "xml.so"
 
 
 
@@ -272,7 +279,21 @@ route[aka_resume_sar] {
 	xlog("[$ci] SAA rc: $var(rc), SAA AVPs: $var(rpl_avps)\n");
 	$avp(attr) = $ct.fields(params);
 	append_to_reply("Service-Route: <sip:orig@scscf.${IMS_DOMAIN}:6060;lr>\r\n");
-	append_to_reply("P-Associated-URI: <$fu>\r\n");
+	$json(rpl_avps) := $var(rpl_avps);
+	for ($var(item) in $(json(rpl_avps)[*])) {
+		$json(item) := $var(item);
+		for ($var(key) in $(json(item.keys)[*])) {
+			if ($var(key) == "Cx-User-Data") {
+				$xml(data) := $json(item/$var(key));
+				$xml(profile) := $xml(data/IMSSubscription/ServiceProfile);
+				$var(idx) = 0;
+				while ($xml(profile/ServiceProfile/PublicIdentity[$var(idx)]) != NULL) {
+					append_to_reply("P-Associated-URI: <$xml(profile/ServiceProfile/PublicIdentity[$var(idx)]/Identity.val)>\r\n");
+					$var(idx) = $var(idx) + 1;
+				}
+			}
+		}
+	}
 	if (!save("location", "path-lazy")) {
 		t_reply(503, "Internal Error");
 		exit;
