pcscf: update reginfo on success

--- a/pcscf/opensips.cfg
+++ b/pcscf/opensips.cfg
@@ -300,6 +300,9 @@ onreply_route[register_reply] {
 		} else if ($T_reply_code == 200) {
 			if (!save("location", "no-reply, path-off"))
 				xlog("L_ERR", "[$ci] could not save\n");
+			else
+				ul_add_key("location", "$tU@$td", "identities", "$hdr(P-Associated-URI)");
+			reginfo_update("$tU@$td");
 		}
 
 	}
