handle multiple identities
Credits go to Herle Supreeth (@herlesupreeth) for fixing it in docker_open5gs

--- a/scscf/opensips.cfg
+++ b/scscf/opensips.cfg
@@ -289,13 +289,23 @@ route[aka_resume_sar] {
 				$var(idx) = 0;
 				while ($xml(profile/ServiceProfile/PublicIdentity[$var(idx)]) != NULL) {
 					append_to_reply("P-Associated-URI: <$xml(profile/ServiceProfile/PublicIdentity[$var(idx)]/Identity.val)>\r\n");
+					$var(uri) = $xml(profile/ServiceProfile/PublicIdentity[$var(idx)]/Identity.val);
+					if ($var(uri) == $tu) {
+						# Save AoR for IMPU in format sip:IMSI@IMS_DOMAIN and send 200 response.
+						if (!save("location", "path-lazy")) {
+							t_reply(503, "Internal Error");
+							exit;
+						}
+					} else {
+						# Save AoR for IMPU in other formats and dont send response.
+						if (!save("location", "no-reply, path-lazy", $var(uri))) {
+							t_reply(503, "Internal Error");
+							exit;
+						}
+					}
 					$var(idx) = $var(idx) + 1;
 				}
 			}
 		}
-	}
-	if (!save("location", "path-lazy")) {
-		t_reply(503, "Internal Error");
-		exit;
 	}
 }
